# BDE2.0

./: .dockerignore  .env.example  .gitignore  .replit  DOCKER_DEPLOYMENT.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.docker.md  design_guidelines.md  docker-compose.dev.yml  docker-compose.yml  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  replit.md  requirements-docker.txt  run_servers.py  start_all.sh
api/: auth.py  database.py  dependencies.py  main.py  models.py  schemas.py  seed.py
attached_assets/: Pasted--rest-express-1-0-0-dev-NODE-ENV-development-tsx-server-index-ts-Checking-and-initializing-1760979482048_1760979482049.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: ActiveUsersSidebar.tsx  AdminDashboard.tsx  AppHeader.tsx  BarcodeDisplay.tsx  BottomDrawer.tsx  CompactSessionsSidebar.tsx  CompactWorkTracker.tsx  FlexibleInput.tsx  LanguageSwitcher.tsx  LogoutButton.tsx  MachineLoginForm.tsx  MultiUserWorkTracker.tsx  Timer.tsx  UserSelectionCard.tsx  UserSelectionPage.tsx  WorkHistoryDialog.tsx  WorkTracker.tsx
client/src/contexts/: AuthContext.tsx  LanguageContext.tsx
client/src/hooks/: use-barcode-input.ts
client/src/i18n/: translations.ts
client/src/lib/: api.ts  avatars.ts  barcode-utils.ts  qr-code-parser.ts
client/src/pages/: AdminPage.tsx  (+4 more)
migrations/: 0000_rainy_spencer_smythe.sql
migrations/meta/: 0000_snapshot.json  _journal.json
server/: index.ts  init-db.ts  migrate-passwords.ts  routes.ts  seed.ts  storage.ts
shared/: schema.ts
(+9 files in other folders)
